--- a/UI/View/CarManagementWindow.xaml
+++ b/UI/View/CarManagementWindow.xaml
@@ -3,48 +3,49 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        
-        xmlns:local="clr-namespace:UI.View"
-        xmlns:viewmodel="clr-namespace:UI.ViewModel" 
+
+        xmlns:viewmodel="clr-namespace:UI.ViewModel"
         xmlns:utils="clr-namespace:UI.Utils"
         d:DataContext="{d:DesignInstance Type=viewmodel:CarManagementViewModel}"
         mc:Ignorable="d"
         Title="Car Management" Height="600" Width="800"
         xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml">
-    <Window.Resources
-        >
+    <Window.Resources>
         <Style TargetType="ui:DataGrid">
-            <Setter Property="RowBackground" Value="LightBlue"/>
-            <Setter Property="AlternatingRowBackground" Value="LightYellow"/>
+            <Setter Property="RowBackground" Value="LightBlue" />
+            <Setter Property="AlternatingRowBackground" Value="LightYellow" />
         </Style>
-               <utils:NullToBoolConverter x:Key="NullToBoolConverter" />
+        <utils:NullToBoolConverter x:Key="NullToBoolConverter" />
     </Window.Resources>
-    
+
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
         <StackPanel Orientation="Horizontal" Grid.Row="0" Margin="5">
-            <ui:Button Appearance="Primary" Content="Add New" Margin="5" Command="{Binding ShowCarFormCommand}"/>
-            <ui:Button Appearance="Primary" Content="Edit Selected" IsEnabled="{Binding SelectedCarInformation, Converter={StaticResource NullToBoolConverter}}" Margin="5" Command="{Binding ShowCarEditFormCommand}"/>
-            <ui:Button Appearance="Primary" Content="Delete Selected" Margin="5" IsEnabled="{Binding SelectedCarInformation, Converter={StaticResource NullToBoolConverter}}"
-                       Command="{Binding DeleteCarCommand}"/>
-            <ui:TextBox Text="{Binding SearchText}"  x:Name="SearchTextBox" Width="200" Margin="5"/>
+            <ui:Button Appearance="Primary" Content="Add New" Margin="5" Command="{Binding ShowCarFormCommand}" />
+            <ui:Button Appearance="Primary" Content="Edit Selected"
+                       IsEnabled="{Binding SelectedCarInformation, Converter={StaticResource NullToBoolConverter}}"
+                       Margin="5" Command="{Binding ShowCarEditFormCommand}" />
+            <ui:Button Appearance="Primary" Content="Delete Selected" Margin="5"
+                       IsEnabled="{Binding SelectedCarInformation, Converter={StaticResource NullToBoolConverter}}"
+                       Command="{Binding DeleteCarCommand}" />
+            <ui:TextBox Text="{Binding SearchText}" x:Name="SearchTextBox" Width="200" Margin="5" />
             <ui:Button Appearance="Primary" Content="Search" Margin="5" Command="{Binding SearchCarInformationCommand}" />
         </StackPanel>
 
-        <ui:DataGrid  ItemsSource="{Binding CarInformations}"
-          SelectedItem="{Binding SelectedCarInformation, Mode=TwoWay}" 
-          AutoGenerateColumns="False" Grid.Row="1" 
-          IsReadOnly="True" Margin="5" SelectionMode="Single" 
-          Focusable="True" RowBackground="LightYellow" AlternatingRowBackground="LightBlue">
+        <ui:DataGrid ItemsSource="{Binding CarInformations}"
+                     SelectedItem="{Binding SelectedCarInformation, Mode=TwoWay}"
+                     AutoGenerateColumns="False" Grid.Row="1"
+                     IsReadOnly="True" Margin="5" SelectionMode="Single"
+                     Focusable="True" RowBackground="LightYellow" AlternatingRowBackground="LightBlue">
             <DataGrid.Resources>
                 <Style TargetType="{x:Type DataGridRow}">
                     <Style.Triggers>
                         <Trigger Property="IsSelected" Value="True">
-                            <Setter Property="Background" Value="Black"/>
+                            <Setter Property="Background" Value="Black" />
                         </Trigger>
                     </Style.Triggers>
                 </Style>
@@ -60,9 +61,10 @@
                 <DataGridTextColumn Header="Year" Width="*" Binding="{Binding Year}" />
 
                 <!-- Numeric Column for Renting Price Per Day -->
-                <DataGridTextColumn Header="Price Per Day" Width="*" Binding="{Binding CarRentingPricePerDay, StringFormat=C}" />
+                <DataGridTextColumn Header="Price Per Day" Width="*"
+                                    Binding="{Binding CarRentingPricePerDay, StringFormat=C}" />
 
-                <DataGridTextColumn Header="Fuel Type" Width="*" Binding="{Binding FuelType}"/>
+                <DataGridTextColumn Header="Fuel Type" Width="*" Binding="{Binding FuelType}" />
 
                 <!-- ComboBox Column for Manufacturer -->
                 <!-- This requires setting up a value converter or using a specific field from Manufacturer -->
@@ -79,4 +81,3 @@
 
     </Grid>
 </Window>
-
