--- a/UI/View/CustomerFormWindow.xaml
+++ b/UI/View/CustomerFormWindow.xaml
@@ -1,17 +1,16 @@
 ﻿<Window x:Class="UI.View.CustomerFormWindow"
-        xmlns:local="clr-namespace:UI.View"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
- d:DataContext="{d:DesignInstance Type=viewmodel:CustomerFormViewModel}"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        d:DataContext="{d:DesignInstance Type=viewmodel:CustomerFormViewModel}"
         mc:Ignorable="d"
 
-        xmlns:viewmodel="clr-namespace:UI.ViewModel" 
+        xmlns:viewmodel="clr-namespace:UI.ViewModel"
         Title="Customer Registration" Height="530" Width="530"
         ResizeMode="NoResize" Background="White"
         xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml">
-    
+
     <Grid Margin="20">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -22,9 +21,9 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
         <Label Grid.Row="0" Content="Name:" Margin="0,0,0,10" />
@@ -37,13 +36,13 @@
         <TextBox Grid.Row="5" Text="{Binding Customer.Email}" Margin="0,0,0,20" Padding="5" />
 
         <Label Grid.Row="6" Content="Birthday:" Margin="0,0,0,10" />
-        <DatePicker SelectedDateFormat="Short"  Grid.Row="7" SelectedDate="{Binding Customer.CustomerBirthday}" Margin="0,0,0,20" />
+        <DatePicker SelectedDateFormat="Short" Grid.Row="7" SelectedDate="{Binding Customer.CustomerBirthday}"
+                    Margin="0,0,0,20" />
 
         <Label Grid.Row="8" Content="Password:" Margin="0,0,0,10" />
-        <TextBox Grid.Row="9" Text="{Binding Customer.Password}"   Margin="0,0,0,20" Padding="5" />
+        <TextBox Grid.Row="9" Text="{Binding Customer.Password}" Margin="0,0,0,20" Padding="5" />
 
-        <ui:Button Appearance="Primary" Grid.Row="10" Content="Save" Padding="10" HorizontalAlignment="Right" Command="{Binding SaveCustomerCommand}"
-                />
+        <ui:Button Appearance="Primary" Grid.Row="10" Content="Save" Padding="10" HorizontalAlignment="Right"
+                   Command="{Binding SaveCustomerCommand}" />
     </Grid>
 </Window>
-
