--- a/UI/View/LoginWindow.xaml
+++ b/UI/View/LoginWindow.xaml
@@ -1,39 +1,40 @@
 ﻿<Window x:Class="UI.View.LoginWindow"
-       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-       xmlns:local="clr-namespace:UI.View"
-       xmlns:viewmodel="clr-namespace:UI.ViewModel"
-       d:DataContext="{d:DesignInstance Type=viewmodel:LoginViewModel}"
-       mc:Ignorable="d"
-       Title="Login to FUCarRentingSystem" Height="355" Width="400"
-       WindowStartupLocation="CenterScreen"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:viewmodel="clr-namespace:UI.ViewModel"
+        d:DataContext="{d:DesignInstance Type=viewmodel:LoginViewModel}"
+        mc:Ignorable="d"
+        Title="Login to FUCarRentingSystem" Height="355" Width="400"
+        WindowStartupLocation="CenterScreen"
         ResizeMode="NoResize"
         xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml">
-    
+
     <Grid Margin="20">
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <TextBlock x:Name="tbTitle" Text="Login" HorizontalAlignment="Center" VerticalAlignment="Top"></TextBlock>
+        <TextBlock x:Name="tbTitle" Text="Login" HorizontalAlignment="Center" VerticalAlignment="Top" />
 
         <Label Content="Email:" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,30,0,0" />
-        <TextBox Grid.Row="1" MinWidth="300"  HorizontalAlignment="Center" VerticalAlignment="Center" Padding="5" Text="{Binding Email, UpdateSourceTrigger=PropertyChanged}" Margin="0,10,0,0" />
+        <TextBox Grid.Row="1" MinWidth="300" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="5"
+                 Text="{Binding Email, UpdateSourceTrigger=PropertyChanged}" Margin="0,10,0,0" />
 
         <Label Content="Password:" Grid.Row="3" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,20,0,0" />
-        <TextBox Grid.Row="4" MinWidth="300" HorizontalAlignment="Center" VerticalAlignment="Center" Text="{Binding Password, UpdateSourceTrigger=PropertyChanged}" Margin="0,10,0,0" />
+        <TextBox Grid.Row="4" MinWidth="300" HorizontalAlignment="Center" VerticalAlignment="Center"
+                 Text="{Binding Password, UpdateSourceTrigger=PropertyChanged}" Margin="0,10,0,0" />
 
-        <ui:Button Appearance="Primary" Grid.Row="5" Content="Login" MinWidth="100" Command="{Binding LoginCommand}" 
-               IsDefault="True" HorizontalAlignment="Center" Margin="0,20,0,0"/>
-        <ui:Button Appearance="Primary" Grid.Row="6" MinWidth="100" Content="Register" Command="{Binding RegisterCommand}" HorizontalAlignment="Center" Margin="0,20,0,0"/>
-        <TextBlock Grid.Row="7" Text="{Binding ErrorMessage}" HorizontalAlignment="Center"/>
-           </Grid>
+        <ui:Button Appearance="Primary" Grid.Row="5" Content="Login" MinWidth="100" Command="{Binding LoginCommand}"
+                   IsDefault="True" HorizontalAlignment="Center" Margin="0,20,0,0" />
+        <ui:Button Appearance="Primary" Grid.Row="6" MinWidth="100" Content="Register"
+                   Command="{Binding RegisterCommand}" HorizontalAlignment="Center" Margin="0,20,0,0" />
+        <TextBlock Grid.Row="7" Text="{Binding ErrorMessage}" HorizontalAlignment="Center" />
+    </Grid>
 </Window>
-
