--- a/UI/View/LoginWindow.xaml
+++ b/UI/View/LoginWindow.xaml
@@ -28,8 +28,8 @@
                  Text="{Binding Email, UpdateSourceTrigger=PropertyChanged}" Margin="0,10,0,0" />
 
         <Label Content="Password:" Grid.Row="3" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,20,0,0" />
-        <TextBox Grid.Row="4" MinWidth="300" HorizontalAlignment="Center" VerticalAlignment="Center"
-                 Text="{Binding Password, UpdateSourceTrigger=PropertyChanged}" Margin="0,10,0,0" />
+        <ui:PasswordBox Grid.Row="4" MinWidth="300" HorizontalAlignment="Center" VerticalAlignment="Center"
+                        PasswordChanged="PasswordBox_OnPasswordChanged" Margin="0,10,0,0" />
 
         <ui:Button Appearance="Primary" Grid.Row="5" Content="Login" MinWidth="100" Command="{Binding LoginCommand}"
                    IsDefault="True" HorizontalAlignment="Center" Margin="0,20,0,0" />
